# llmify

./: .gitignore  README.md  bundle.sh  flake.nix  lint.sh  llmify.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml  tests.yml
.mentat/: precommit.sh  setup.sh
llmify/: __main__.py  gitignore_parser.py
tests/: test_main.py
