[tool.poetry]
name = "llmify"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "llmify" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
llmify = "llmify.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"